# holohub

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  aggregate_metadata.json  dev_container  holohub  holohub-py  index.html  run  sitemap.xml
.github/workflows/: update_readme.yml
applications/: CMakeLists.txt  metadata.schema.json
applications/bci_visualization/: CMakeLists.txt  README.md  bci_visualization.py  metadata.json  requirements.txt
applications/bci_visualization/operators/: stream.py
applications/bci_visualization/testing/: README.md  bci_visualization.patch  generate_reference_frames.sh
applications/distributed/ucxx_endoscopy_tool_tracking/cpp/: overlay.cpp  publisher.cpp
applications/endoscopy_tool_tracking/python/: endoscopy_tool_tracking.py  endoscopy_tool_tracking.yaml
applications/endoscopy_tool_tracking_distributed/: CMakeLists.txt
applications/multiai_endoscopy/: CMakeLists.txt
applications/multiai_endoscopy/cpp/post-proc-cpu/: CMakeLists.txt
applications/multiai_endoscopy/python/: CMakeLists.txt
applications/volume_rendering/python/: CMakeLists.txt
applications/volume_rendering_xr/: CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfile.dev  README.md  main.cpp  metadata.json
applications/volume_rendering_xr/scripts/: dev-entrypoint.sh
applications/volume_rendering_xr/testing/test_render_volume_xr/: CMakeLists.txt  main.cpp
applications/xr_gsplat/: CMakeLists.txt  xr_gsplat.py
assets/: index-4ef1b18e.js
benchmarks/: CMakeLists.txt  metadata.schema.json
benchmarks/release_benchmarking/: README.md  metadata.json  run_benchmarks.sh  test_for_spikes.sh
cmake/modules/: HoloHubTestHelpers.cmake
doc/: release.md
doc/website/scripts/: generate_pages.py
gxf_extensions/emergent_source/: CMakeLists.txt  emergent_source.cpp  emergent_source.hpp
gxf_extensions/lstm_tensor_rt_inference/: tensor_rt_inference.cpp
modules/template/{{cookiecutter.module_repo_name}}/: .gitignore  .markdownlint.yaml  DEVELOPER.md  README.md
modules/template/{{cookiecutter.module_repo_name}}/.github/workflows/: ci.yml
modules/template/{{cookiecutter.module_repo_name}}/applications/{{cookiecutter.module_slug}}_pipeline/: CMakeLists.txt  README.md  {{cookiecutter.module_slug}}_pipeline.py
modules/template/{{cookiecutter.module_repo_name}}/applications/{{cookiecutter.module_slug}}_pipeline/python/: {{cookiecutter.module_slug}}_pipeline.py
modules/template/{{cookiecutter.module_repo_name}}/operators/{{cookiecutter.operator_slug}}/: CMakeLists.txt  README.md
operators/XrFrameOp/: xr_cuda_interop_swapchain.cpp  xr_cuda_interop_swapchain.hpp  xr_session.cpp  xr_session.hpp
operators/XrFrameOp/begin_frame/: xr_begin_frame_op.cpp  xr_begin_frame_op.hpp
operators/XrTransformOp/: CMakeLists.txt
operators/XrTransformOp/XrTransformControlOp/: xr_transform_control_op.cpp  xr_transform_control_op.hpp
operators/XrTransformOp/XrTransformRenderOp/: xr_transform_render_op.cpp  xr_transform_render_op.hpp
operators/XrTransformOp/ux/: ux_bounding_box_controller.cpp  ux_bounding_box_controller.hpp  ux_bounding_box_renderer.cpp  ux_bounding_box_renderer.hpp  ux_cursor.hpp  ux_widgets.hpp  ux_window_controller.cpp  ux_window_controller.hpp  ux_window_renderer.cpp  ux_window_renderer.hpp
operators/grpc_operators/python/: CMakeLists.txt  grpc_input_output_op.py  requirements.txt
operators/medical_imaging/dicom_encapsulated_pdf_writer_operator/: index.html
operators/realsense_camera/: index.html
operators/ucxx_send_receive/: README.md  serialize_tensor.cpp  serialize_tensor.hpp  ucxx_endpoint.cpp  ucxx_endpoint.hpp
operators/ucxx_send_receive/receiver_op/: ucxx_receiver_op.cpp  ucxx_receiver_op.hpp
operators/ucxx_send_receive/sender_op/: ucxx_sender_op.cpp  ucxx_sender_op.hpp
operators/volume_loader/: CMakeLists.txt
operators/volume_renderer/: volume_renderer.cpp
utilities/: gather_metadata.py  summarize_metadata.py
utilities/cli/: container.py  holohub.py  project.py  util.py
utilities/metadata/: gather_metadata.py  project.schema.json
utilities/setup/: README.md  holoscan-dev.sh
